Fixed font size too big on small screen

--- a/src/pages/game/Game.css
+++ b/src/pages/game/Game.css
@@ -13,7 +13,7 @@
   border: none; 
   background: transparent; 
   padding: 0; 
-  margin: 0 10px; 
+  margin: 0; 
   cursor: pointer; 
   overflow: hidden; 
   -webkit-user-select: none;
@@ -31,4 +31,16 @@
   width: 1px; 
   background-color: white; 
   margin: 0 10px; 
+}
+
+@media (max-width: 600px) {
+    .button-left, .button-right {
+        font-size: 15em;
+    }
+}
+
+@media (max-width: 400px) {
+    .button-left, .button-right {
+        font-size: 10em;
+    }
 }
